# constrained-crl

./: .gitignore  README.md  audit_findings.md  audit_wandb_c1_c5.py  buffer.py  cost_utils.py  crl_formulation_verification.md  evaluator.py  job_baseline.slurm  job_constrained.slurm  job_debug.slurm  job_depth_sweep.slurm  job_probe.slurm  job_sweep.slurm  job_sweep_new.slurm  job_train.slurm  job_train_short.slurm  phase0_deploy.md  phase1_criteria.md  plot_depth_ablation.py  probe_cost_wiring.py  probe_minimal.py  pyproject.toml  run_depth_sweep.sh  setup_repo.sh  slurm_depth_sweep.sh  slurm_phase1_smoke.sh  slurm_phase1b_fastsmoke.sh  slurm_phase1c_tight_budget.sh  slurm_phase1d_option_a.sh  slurm_phase1e_tight_budget.sh  slurm_phase1f_l2norm.sh  slurm_phase1f_smoke_probes.sh  slurm_phase1f_smoke_tau1p0.sh  slurm_phase1g_velcost_full.sh  slurm_phase1g_velcost_smoke.sh  slurm_phase1g_velpeek_d0p005.sh  slurm_phase1g_velpeek_d0p01.sh  slurm_phase1g_velpeek_d0p02.sh  slurm_phase1g_velpeek_d0p05.sh  (+5 more)
envs/: __init__.py  ant.py  ant_maze.py  humanoid_maze.py
tests/: test_eval_cost_matches_train.py
